lib/tests/fixtures/compiler/parser/class_reserved_param.baseline
Error: class_reserved_param.pp:1:11: parameter $title is reserved and cannot be used.
  class foo($title) {
            ^~~~~~
